// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SplunkLogDriver Should synth and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "TaskDefinition_ExecutionRole_AssumeRolePolicy_3D368A4F": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ecs-tasks.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "TaskDefinition_ExecutionRole_DefaultPolicy_158F3CB2": {
        "statement": [
          {
            "actions": [
              "secretsmanager:GetSecretValue",
              "secretsmanager:DescribeSecret"
            ],
            "effect": "Allow",
            "resources": [
              "arn:\${data.aws_partition.Partitition.partition}:secretsmanager:\${data.aws_region.Region.name}:\${data.aws_caller_identity.CallerIdentity.account_id}:secret:my-splunk-token-??????"
            ]
          }
        ]
      },
      "TaskDefinition_TaskRole_AssumeRolePolicy_7F67D03A": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ecs-tasks.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_ecs-tasks": {
        "service_name": "ecs-tasks"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_ecs_task_definition": {
      "TaskDefinition_B36D86D9": {
        "container_definitions": "[{\\"essential\\":true,\\"image\\":\\"test-image\\",\\"memory\\":128,\\"name\\":\\"Container\\",\\"logConfiguration\\":{\\"logDriver\\":\\"splunk\\",\\"options\\":{\\"splunk-url\\":\\"my-splunk-url\\"},\\"secretOptions\\":[{\\"name\\":\\"splunk-token\\",\\"valueFrom\\":\\"arn:\${data.aws_partition.Partitition.partition}:secretsmanager:\${data.aws_region.Region.name}:\${data.aws_caller_identity.CallerIdentity.account_id}:secret:my-splunk-token\\"}]}}]",
        "execution_role_arn": "\${aws_iam_role.TaskDefinition_ExecutionRole_8D61C2FB.arn}",
        "family": "TestStackTaskDefinition24388BDF",
        "network_mode": "bridge",
        "requires_compatibilities": [
          "EC2"
        ],
        "tags": {
          "Name": "Default-TaskDefinition",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "gTestStack553BDD39"
        },
        "task_role_arn": "\${aws_iam_role.TaskDefinition_TaskRole_FD40A61D.arn}"
      }
    },
    "aws_iam_role": {
      "TaskDefinition_ExecutionRole_8D61C2FB": {
        "assume_role_policy": "\${data.aws_iam_policy_document.TaskDefinition_ExecutionRole_AssumeRolePolicy_3D368A4F.json}",
        "name_prefix": "gTestStack553BDD39-nitionExecutionRole",
        "tags": {
          "Name": "Default-TaskDefinition",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "gTestStack553BDD39"
        }
      },
      "TaskDefinition_TaskRole_FD40A61D": {
        "assume_role_policy": "\${data.aws_iam_policy_document.TaskDefinition_TaskRole_AssumeRolePolicy_7F67D03A.json}",
        "name_prefix": "gTestStack553BDD39-kDefinitionTaskRole",
        "tags": {
          "Name": "Default-TaskDefinition",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "gTestStack553BDD39"
        }
      }
    },
    "aws_iam_role_policy": {
      "TaskDefinition_ExecutionRole_DefaultPolicy_ResourceRoles0_3BE00862": {
        "name": "TestStackTaskDefinitionExecutionRoleDefaultPolicy59C96995",
        "policy": "\${data.aws_iam_policy_document.TaskDefinition_ExecutionRole_DefaultPolicy_158F3CB2.json}",
        "role": "\${aws_iam_role.TaskDefinition_ExecutionRole_8D61C2FB.name}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;

exports[`SplunkLogDriver Should synth and match SnapShot with sourceType and ssm secret 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_iam_policy_document": {
      "TaskDefinition_ExecutionRole_AssumeRolePolicy_3D368A4F": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ecs-tasks.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "TaskDefinition_ExecutionRole_DefaultPolicy_158F3CB2": {
        "statement": [
          {
            "actions": [
              "ssm:DescribeParameters",
              "ssm:GetParameters",
              "ssm:GetParameter",
              "ssm:GetParameterHistory"
            ],
            "effect": "Allow",
            "resources": [
              "arn:\${data.aws_partition.Partitition.partition}:ssm:\${data.aws_region.Region.name}:\${data.aws_caller_identity.CallerIdentity.account_id}:parameter/token"
            ]
          }
        ]
      },
      "TaskDefinition_TaskRole_AssumeRolePolicy_7F67D03A": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "\${data.aws_service_principal.aws_svcp_default_region_ecs-tasks.name}"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    },
    "aws_region": {
      "Region": {
        "provider": "aws"
      }
    },
    "aws_service_principal": {
      "aws_svcp_default_region_ecs-tasks": {
        "service_name": "ecs-tasks"
      }
    },
    "aws_ssm_parameter": {
      "ParameterParameter": {
        "name": "/token:1"
      }
    }
  },
  "provider": {
    "aws": [
      {
      }
    ]
  },
  "resource": {
    "aws_ecs_task_definition": {
      "TaskDefinition_B36D86D9": {
        "container_definitions": "[{\\"essential\\":true,\\"image\\":\\"test-image\\",\\"memory\\":128,\\"name\\":\\"Container\\",\\"logConfiguration\\":{\\"logDriver\\":\\"splunk\\",\\"options\\":{\\"splunk-url\\":\\"my-splunk-url\\",\\"splunk-sourcetype\\":\\"my-source-type\\"},\\"secretOptions\\":[{\\"name\\":\\"splunk-token\\",\\"valueFrom\\":\\"arn:\${data.aws_partition.Partitition.partition}:ssm:\${data.aws_region.Region.name}:\${data.aws_caller_identity.CallerIdentity.account_id}:parameter/token\\"}]}}]",
        "execution_role_arn": "\${aws_iam_role.TaskDefinition_ExecutionRole_8D61C2FB.arn}",
        "family": "TestStackTaskDefinition24388BDF",
        "network_mode": "bridge",
        "requires_compatibilities": [
          "EC2"
        ],
        "tags": {
          "Name": "Default-TaskDefinition",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "gTestStack553BDD39"
        },
        "task_role_arn": "\${aws_iam_role.TaskDefinition_TaskRole_FD40A61D.arn}"
      }
    },
    "aws_iam_role": {
      "TaskDefinition_ExecutionRole_8D61C2FB": {
        "assume_role_policy": "\${data.aws_iam_policy_document.TaskDefinition_ExecutionRole_AssumeRolePolicy_3D368A4F.json}",
        "name_prefix": "gTestStack553BDD39-nitionExecutionRole",
        "tags": {
          "Name": "Default-TaskDefinition",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "gTestStack553BDD39"
        }
      },
      "TaskDefinition_TaskRole_FD40A61D": {
        "assume_role_policy": "\${data.aws_iam_policy_document.TaskDefinition_TaskRole_AssumeRolePolicy_7F67D03A.json}",
        "name_prefix": "gTestStack553BDD39-kDefinitionTaskRole",
        "tags": {
          "Name": "Default-TaskDefinition",
          "grid:EnvironmentName": "Default",
          "grid:UUID": "gTestStack553BDD39"
        }
      }
    },
    "aws_iam_role_policy": {
      "TaskDefinition_ExecutionRole_DefaultPolicy_ResourceRoles0_3BE00862": {
        "name": "TestStackTaskDefinitionExecutionRoleDefaultPolicy59C96995",
        "policy": "\${data.aws_iam_policy_document.TaskDefinition_ExecutionRole_DefaultPolicy_158F3CB2.json}",
        "role": "\${aws_iam_role.TaskDefinition_ExecutionRole_8D61C2FB.name}"
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "hashicorp/aws",
        "version": "6.52.0"
      }
    }
  }
}"
`;
